deploy/demo/dataset-catalog-frontend/dataset-catalog-frontend-env.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataset-catalog-frontend
  labels:
    app: dataset-catalog-frontend
spec:
  template:
    spec:
      containers:
        - name: dataset-catalog-frontend
